@@ -623,9 +623,12 @@ end
 
     if nargout==0, 
         cat_io_cprintf('err', sprintf( ...
-         ['If have to call [cat_stat_]spm_results_ui with output parameter: \n' ...
-          '  [hReg,xSPM,SPM] = cat_stat_spm_results_ui; \n' ...
-          'Otherwise, the menu and tables will not work probalby: Call now: \n  %s\n'], ...
+         ['\n' ...
+          '========================================================================\n' ...
+          '  You have to call [cat_stat_]spm_results_ui with all output parameters: \n' ...
+          '    [hReg,xSPM,SPM] = cat_stat_spm_results_ui; \n\n' ...
+          '  Otherwise, the menu and tables will not work probalby! Call now: \n    %s\n'...
+          '========================================================================\n\n'], ...
           spm_file('[hReg,xSPM,SPM] = cat_stat_spm_results_ui(''Output'');',...
             'link','[hReg,xSPM,SPM] = cat_stat_spm_results_ui(''Output'');')));  
       
@@ -721,7 +724,8 @@ end
             'ToolTipString',...
             'Tabulate p-values & statistics for local maxima of nearest cluster',...
             'Callback','TabDat = spm_list(''ListCluster'',xSPM,hReg); cat_stat_spm_results_ui(''spm_list_cleanup'',hReg);',...
-            'Interruptible','on','Enable','on',...
+            ...'Interruptible','on','Enable','on',... % CAT: RD202003: spm_list error - not in mesh yet
+            'Interruptible','off','Enable','off',... % CAT: RD202003: spm_list error - not in mesh yet
             'Position',[005 030 100 020].*WS);
         uicontrol('Parent',hPan,'Style','PushButton','String','small volume',...
             'Units','Pixels',...
@@ -729,7 +733,8 @@ end
             'ToolTipString',['Small Volume Correction - corrected p-values ',...
             'for a small search region'],...
             'Callback','TabDat = spm_VOI(SPM,xSPM,hReg);',...
-            'Interruptible','on','Enable','on',...
+            ...'Interruptible','on','Enable','on',... % CAT: RD202003: spm_read_vols error - no mesh function 
+            'Interruptible','off','Enable','off',... % CAT: RD202003: spm_read_vols error - no mesh function 
             'Position',[005 005 100 020].*WS);
  
  
@@ -755,14 +760,16 @@ end
             'ToolTipString',...
             'Canonical variates analysis for the current contrast and VOI',...
             'Callback','CVA = spm_cva_ui('''',xSPM,SPM)',...
-            'Interruptible','on','Enable','on',...
+            ...'Interruptible','on','Enable','on',... % CAT: RD202003
+            'Interruptible','off','Enable','off',... % CAT: RD202003
             'FontSize',FS(10));
         uicontrol('Parent',hPan,'Style','PushButton','String','multivariate Bayes',...
             'Position',[005 030 140 020].*WS,...
             'ToolTipString',...
             'Multivariate Bayes',...
             'Callback','[MVB] = spm_mvb_ui(xSPM,SPM)',...
-            'Interruptible','on','Enable','on',...
+            ...'Interruptible','on','Enable','on',... % CAT: RD202003
+            'Interruptible','off','Enable','off',... % CAT: RD202003
             'FontSize',FS(10));
         uicontrol('Parent',hPan,'Style','PushButton','String','BMS',...
             'Position',[005 005 069 020].*WS,...
@@ -818,18 +825,36 @@ end
             'Position',[005 055 100 020].*WS,...
             'Tag','plotButton');
  
-        str  = { 'overlays...','slices','sections','montage','render','previous sections','previous render'};
+        str  = {'overlays...',...
+          ...'slices', ...  % CAT: RD202003 - no working
+          'sections', ...
+          'CAT T1 IXI555 GS', ...
+          ... 'montage',... % CAT: RD202003 - working but not useful for surfaces
+          'render',...  % CAT: RD202003 - working but not useful for surfaces?
+          'previous sections',...
+          'previous render'};
         tstr = { 'overlay filtered SPM on another image: ',...
-            '3 slices / ','slice overlay /','ortho sections / ','render /','previous ortho sections /','previous surface rendering'};
- 
-        tmp  = { 'spm_transverse(''set'',xSPM,hReg)',...
-            'spm_sections(xSPM,hReg)',...
-            {@myslover},...
+            ...'3 slices / ',...
+            'slice overlay /', ...
+            'T1 avg slice overlay /', ...
+            ... 'ortho sections / ', ...
+            'render /', ...
+            'previous ortho sections /', ...
+            'previous surface rendering'};
+
+        tmp  = { ... 'spm_transverse(''set'',xSPM,hReg)',...
+            ['spm_sections(xSPM,hReg);','spm_orthviews(''RemoveBlobs'',1);'],... % CAT RD202003 - remove blobs colorbar
+            ['spm_sections(xSPM,hReg,fullfile(spm(''dir''),''toolbox'',''cat12'','...
+             '''templates_volumes'',''Template_T1_IXI555_MNI152_GS.nii''));',...
+             'spm_orthviews(''RemoveBlobs'',1);', ...
+             ...'cat_stat_spm_results_ui(''spm_list_cleanup'');',...
+            ],... % CAT RD202003 - add T1 avg
+            ....{@myslover},...
             ['spm_render(   struct( ''XYZ'',    xSPM.XYZ,',...
             '''t'',     xSPM.Z'',',...
             '''mat'',   xSPM.M,',...
             '''dim'',   xSPM.DIM))'],...
-            ['global prevsect;','spm_sections(xSPM,hReg,prevsect)'],...
+            ['global prevsect;','spm_sections(xSPM,hReg,prevsect);','spm_orthviews(''RemoveBlobs'',1);'],...
             ['global prevrend;','if ~isstruct(prevrend)',...
             'prevrend = struct(''rendfile'','''',''brt'',[],''col'',[]); end;',...            
             'spm_render(    struct( ''XYZ'',    xSPM.XYZ,',...
@@ -1641,23 +1666,27 @@ assignin('base','so',so);
 %==========================================================================
 function spm_list_cleanup(hReg)
 %==========================================================================
-  hRes.Fgraph       = spm_figure('GetWin','Graphics');
+  hRes.Fgraph       = spm_figure('FindWin','Graphics');
 
   % fine red lines of the SPM result table
-  hRes.Fline        = findobj(hRes.Fgraph,'Type','Line','Tag','');
+  hRes.Fline        = findobj(hRes.Fgraph,'Type','Line','Tag','');% ,'UIcontextMenu',[]);
   hRes.FlineAx      = get(hRes.Fline,'parent');
   
-  set(hRes.Fline,'HitTest','off');
-  for axi = 1:numel( hRes.FlineAx ), set(hRes.FlineAx{axi},'HitTest','off','visible','off'); end
-
-  % find the SPM string within the surface axis 
+  set(hRes.Fline,'HitTest','off'); %set(hRes.FlineAx{axi},'HitTest','off','visible','off');
+  for axi = 1:numel( hRes.FlineAx ),  rotate3d(hRes.FlineAx{axi},'off'); end
+  
+  %%
+  hRes.Img        = get(findobj(hRes.Fgraph,'Type','Image','Tag','Transverse'),'parent');
+  for axi = 1:numel( hRes.Img  ),  rotate3d(hRes.Img{axi},'off'); end
+  
+  %% find the SPM string within the surface axis 
   hRes.Ftext        = findobj(hRes.Fgraph,'Type','Text');
   stext             = get(hRes.Ftext,'String'); 
   hRes.Ftext3dspm   = findobj(hRes.Fgraph,'Type','Text','String', ...
     stext{ find(~cellfun('isempty',strfind(stext,'SPM\{'))) } );
   set(hRes.Ftext3dspm,'visible','off','HitTest','off');
   
-  % get backgroundcolor
+  %% get backgroundcolor
   bgc = get(hRes.Fgraph,'Color'); 
   % get low contrast texts 
   Ftextcol = cell2mat(get(hRes.Ftext,'Color'));
